# NeuroBIOS

./: .gitignore  LICENSE  README.md  board.md  pyproject.toml  requirements.txt
docs/: architecture-concept.md  board.md  general-concept.md
src/: fsm.py  main.py
src/agents/coffee/: coffee_agent.py  coffee_config.py  coffee_constants.py  coffee_tools.py
src/agents/coffee/controllers/: coffee_execute.py  coffee_global_plan.py  coffee_next_step_plan.py  coffee_summarize.py  coffee_system.py  coffee_verify.py
src/agents/coffee/prompts/: coffee_execute_prompt.py  coffee_macro_plan_prompt.py  coffee_plan_next_step_prompt.py  coffee_plan_prompt.py  coffee_plan_task_prompt.py  coffee_summarize_task_prompt.py  coffee_verify_prompt.py
src/agents/coffee/prompts/system/: coffee_maker_system_prompt.py
src/agents/coffee/tools/: coffee_execute_tools_contract.py  coffee_execute_tools_definition.py  coffee_tools_contract.py  coffee_tools_definition.py
src/core/: agent.py  constants.py  context_manager.py  fsm.py
src/core/controller/: base_controller.py  base_lm_controller.py  base_tools_controller.py
src/lm/: flow_predictor.py  lm_client.py  lm_constants.py  lm_context_store.py  lm_service.py  system_prompts.py
src/neurobios/: __init__.py
src/neurobios/core/: __init__.py  agent.py  constants.py  context_manager.py  deps.py  fsm.py  models.py  utils.py
src/neurobios/core/controller/: __init__.py  base_controller.py  base_lm_controller.py  base_tools_controller.py
src/neurobios/lm/: __init__.py  lm_client.py  lm_service.py  models.py
(+6 files in other folders)
